gccida/g2/edivm
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/edivm/src/real.c:2995:10: error: use of undeclared identifier 'unk_97C802'
while ( &unk_97C802 != ( _UNKNOWN *)v6 ); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/edivm/src/obj/real.o] Error 1
